# ScheduleTgBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  file_downloader.py  pyproject.toml  requirements.txt  test2.py  xlsx_loader.py
src/alembic/: env.py
src/alembic/versions/: 2026_02_16_1436-6f8801395d90_init_db.py  2026_02_16_1441-bd8b5e2c9224_fix_parity.py  2026_02_26_1120-44b645d28b60_delete_messages_table.py
src/bot/: filters.py  handlers.py  json_parser.py  json_parser_deprecated.py  lexicon.py  main.py  states.py  utils.py
src/bot/handlers/: __init__.py  admin_panel.py  commands.py  schedule.py  users.py
src/bot/keyboards/: inline_kb_builder.py  main_keyboard.py
src/bot/lexicon/: lexicon.py
src/bot/middlewares/: __init__.py  banned_users_checker.py  bot_message_memorizer.py  bot_state_service.py  db.py
src/bot/utils/: keyboard_makers.py  schedule_maker.py  sender_messages.py
src/core/: __init__.py  config.py  db.py  db_deprecated.py  db_helper.py
src/core/taskiq/: __init__.py  broker.py
src/crud/: bot_messages.py  bot_swicher.py  schedules.py  users.py
src/data/: config.py  db.py
src/parser/: file_downloader.py  formatter.py  parser_from_xlsx.py  schedule_crud.py  xlsx_loader.py
src/schedule_parser/: __init__.py  file_downloader.py  formatter.py  parser_from_xlsx.py
src/tasks/: __init__.py  schedule.py
src/utils/: schedule_crud.py
