[project]
name = "scheduletgbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "black>=26.1.0",
    "certifi>=2026.1.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.1",
    "xlrd>=2.0.2",
]
